[gd_scene load_steps=12 format=2]

[ext_resource path="res://objects/LaserBeam/LaserBeam2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/EffectsSprites/glowing_circle_gray.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.697531, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.518919, 1 ), 0.0, -2.53149, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 100, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.481081, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 60, 20, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -100.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.3
scale_curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
gravity = Vector3( 0, 100, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="LaserBeam" type="RayCast2D"]
modulate = Color( 1.30196, 1.30196, 1.30196, 0.960784 )
collision_mask = 42
script = ExtResource( 1 )
max_length = 2400
is_inner_line = true

[node name="FillLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 14.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 0.0
antialiased = true

[node name="CastingParticles2D" type="Particles2D" parent="."]
modulate = Color( 1, 0.827451, 0.980392, 1 )
emitting = false
lifetime = 0.3
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
modulate = Color( 1, 0.827451, 0.980392, 1 )
emitting = false
amount = 50
randomness = 1.0
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
draw_order = 1
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
modulate = Color( 1, 0.827451, 0.980392, 1 )
emitting = false
amount = 16
lifetime = 0.3
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="InnerLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 1, 1, 1, 1 )
